# ePlacePractice

./: .gitignore  CMakeLists.txt  README.md
Data/bench/: .gitignore
Data/outputs/images/: .gitignore
bench/: .gitignore
bench/ispd18/ispd18_test10/: ispd18_test10.input.lef
bench/ispd18/ispd18_test6/: ispd18_test6.input.lef
bench/ispd18/ispd18_test7/: ispd18_test7.input.lef
bench/ispd18/ispd18_test8/: ispd18_test8.input.lef
bench/ispd18/ispd18_test9/: ispd18_test9.input.lef
include/Algorithms/: FFT.h  FFT_calculator.h
include/DataStructure/: Bin.h  Cell.h  Circuit.h  Component.h  Parser.h
include/Utility/: Visualizer.h
module/def/def/: defiComponent.hpp
module/lef/lef/: lefiMacro.hpp
src/: main.cpp
src/Algorithms/: FFT.cpp  FFT_calculator.cpp
src/DataStructure/: Bin.cpp  Cell.cpp  Circuit.cpp  Parser.cpp
src/Utility/: Visualizer.cpp  visualization.cpp
